Extract transformer from H2/MySQL/PG